code/dotnet/StreetAccountNews/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# StreetAccount News client library for .NET

[![API Version](https://img.shields.io/badge/api-v0.1.0-blue)](https://developer.factset.com/api-catalog/streetaccount-news-api)
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.StreetAccountNews)](https://www.nuget.org/packages/FactSet.SDK.StreetAccountNews)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The StreetAccount News API provides access to FactSet's proprietary news provider, StreetAccount. StreetAccount, is a premium real-time market intelligence news service that delivers comprehensive U.S., Canadian, and European coverage (and expanding Asia coverage). All possible sources for corporate news are scanned and key story facts are highlighted and presented in an easy-to-read format.

**StreetAccount Filters, Headlines, and Views:**

These endpoints allow for the retrieval of news headlines using filters such as Watchlists/Indices/Tickers, Company Filters, Market Topics, Regions, and Sectors.  Headlines can also be retrieved based on saved views within the Workstation.

**StreetAccount Historical Stories:**

These endpoints provide access to historical StreetAccount (SA) news. The API delivers SA stories in XML format based on user-specified date input parameters. Output files are securely available to users through a URL. This API has three endpoints: Request Files, Check Status, and Get Files.

Please note that this API only supports adhoc requests for historical files and does not support real-time files. If real-time push is required, consider using other methods such as SFTP, QNT account, or Azure Storage. Both historical and real-time Street Account news can be delivered via SFTP, QNT account, or Azure Storage.

The files delivered contain both metadata and content body, eliminating the need for multiple requests through multiple services to retrieve all the information.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.1.0
- SDK version: 0.20.4
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.StreetAccountNews -v 0.20.4
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.StreetAccountNews -Version 0.20.4
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.StreetAccountNews.Api;
using FactSet.SDK.StreetAccountNews.Client;
using FactSet.SDK.StreetAccountNews.Model;

namespace Example
{
    public static class GetStreetAccountFiltersExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.StreetAccountNews.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new FiltersApi(config);
            var structured = true;  // bool? | Pass structured to generate a structured view of the available filters. (optional) 
            var flattened = true;  // bool? | Pass flattened to generate a structured view of the available filters. (optional) 

            try
            {
                // Retrieve all StreetAccount filters
                FilterResponse result = apiInstance.GetStreetAccountFilters(structured, flattened);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling FiltersApi.GetStreetAccountFilters: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/research/news/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FiltersApi* | [**GetStreetAccountFilters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/FiltersApi.md#getstreetaccountfilters) | **GET** /streetaccount/filters | Retrieve all StreetAccount filters
*HeadlinesApi* | [**GetStreetAccountHeadlines**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/HeadlinesApi.md#getstreetaccountheadlines) | **POST** /streetaccount/headlines | Retrieve StreetAccount headlines for given filters
*HeadlinesApi* | [**GetStreetAccountHeadlinesByView**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/HeadlinesApi.md#getstreetaccountheadlinesbyview) | **POST** /streetaccount/views/{id}/headlines | Retrieve StreetAccount headlines for given view
*StreetAccountHistoricalStoriesApi* | [**StreetaccountHistoricalCheckStatusGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StreetAccountHistoricalStoriesApi.md#streetaccounthistoricalcheckstatusget) | **GET** /streetaccount/historical/check-status | Returns the status and percentage of completion for the requested jobID
*StreetAccountHistoricalStoriesApi* | [**StreetaccountHistoricalGetFilesGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StreetAccountHistoricalStoriesApi.md#streetaccounthistoricalgetfilesget) | **GET** /streetaccount/historical/get-files | Returns the StreetAccount XML files for the specified date range
*StreetAccountHistoricalStoriesApi* | [**StreetaccountHistoricalRequestFilesGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StreetAccountHistoricalStoriesApi.md#streetaccounthistoricalrequestfilesget) | **GET** /streetaccount/historical/request-files | Returns the jobID
*ViewsApi* | [**CreateStreetAccountView**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/ViewsApi.md#createstreetaccountview) | **POST** /streetaccount/views/{id} | Creates and saves a StreetAccount view
*ViewsApi* | [**DeleteStreetAccountView**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/ViewsApi.md#deletestreetaccountview) | **DELETE** /streetaccount/views/{id} | Deletes an existing StreetAccount view
*ViewsApi* | [**EditStreetAccountView**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/ViewsApi.md#editstreetaccountview) | **PUT** /streetaccount/views/{id} | Edits and saves an existing StreetAccount view
*ViewsApi* | [**GetStreetAccountViews**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/ViewsApi.md#getstreetaccountviews) | **GET** /streetaccount/views | Retrieves StreetAccount search views


## Documentation for Models

 - [Model.Checkstatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/Checkstatus.md)
 - [Model.CheckstatusResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/CheckstatusResponse.md)
 - [Model.CreateEditDeleteViewResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/CreateEditDeleteViewResponse.md)
 - [Model.CreateEditDeleteViewResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/CreateEditDeleteViewResponseData.md)
 - [Model.CreateEditDeleteViewResponseDataMessage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/CreateEditDeleteViewResponseDataMessage.md)
 - [Model.CreateOrEditViewBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/CreateOrEditViewBody.md)
 - [Model.CreateOrEditViewBodyData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/CreateOrEditViewBodyData.md)
 - [Model.CreateOrEditViewTickers](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/CreateOrEditViewTickers.md)
 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/Error.md)
 - [Model.ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/ErrorObject.md)
 - [Model.FilterResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/FilterResponse.md)
 - [Model.FilterResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/FilterResponseData.md)
 - [Model.FlattenedFilters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/FlattenedFilters.md)
 - [Model.FlattenedFiltersCategoriesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/FlattenedFiltersCategoriesObject.md)
 - [Model.FlattenedFiltersRegionsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/FlattenedFiltersRegionsObject.md)
 - [Model.FlattenedFiltersSectorsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/FlattenedFiltersSectorsObject.md)
 - [Model.FlattenedFiltersTopicsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/FlattenedFiltersTopicsObject.md)
 - [Model.FlattenedFiltersWatchlistsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/FlattenedFiltersWatchlistsObject.md)
 - [Model.Getfiles](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/Getfiles.md)
 - [Model.GetfilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/GetfilesResponse.md)
 - [Model.IsPartialOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/IsPartialOne.md)
 - [Model.MetaOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/MetaOne.md)
 - [Model.PaginationOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/PaginationOne.md)
 - [Model.RequestfilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/RequestfilesResponse.md)
 - [Model.SaHeadlinesRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SaHeadlinesRequest.md)
 - [Model.SaHeadlinesRequestByView](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SaHeadlinesRequestByView.md)
 - [Model.SaHeadlinesRequestByViewData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SaHeadlinesRequestByViewData.md)
 - [Model.SaHeadlinesRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SaHeadlinesRequestData.md)
 - [Model.SaHeadlinesRequestDataSearchDate](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SaHeadlinesRequestDataSearchDate.md)
 - [Model.SaHeadlinesRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SaHeadlinesRequestMeta.md)
 - [Model.SaHeadlinesRequestMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SaHeadlinesRequestMetaPagination.md)
 - [Model.SaHeadlinesRequestTickersObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SaHeadlinesRequestTickersObject.md)
 - [Model.SearchResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SearchResponse.md)
 - [Model.SearchResponseArrayObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SearchResponseArrayObject.md)
 - [Model.SearchResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SearchResponseData.md)
 - [Model.SearchResponseMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SearchResponseMeta.md)
 - [Model.SearchResponseMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/SearchResponseMetaPagination.md)
 - [Model.StreetAccountStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StreetAccountStatus.md)
 - [Model.StructuredFilters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StructuredFilters.md)
 - [Model.StructuredFiltersCategoriesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StructuredFiltersCategoriesObject.md)
 - [Model.StructuredFiltersChildrenObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StructuredFiltersChildrenObject.md)
 - [Model.StructuredFiltersRegionsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StructuredFiltersRegionsObject.md)
 - [Model.StructuredFiltersSectorsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StructuredFiltersSectorsObject.md)
 - [Model.StructuredFiltersTopicsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StructuredFiltersTopicsObject.md)
 - [Model.StructuredFiltersWatchlistsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/StructuredFiltersWatchlistsObject.md)
 - [Model.Views](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/Views.md)
 - [Model.ViewsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v0/docs/ViewsObject.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
