code/dotnet/StreetAccountNews/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# StreetAccount News client library for .NET

[![API Version](https://img.shields.io/badge/api-v1.1.0-blue)](https://developer.factset.com/api-catalog/streetaccount-news-api)
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.StreetAccountNews)](https://www.nuget.org/packages/FactSet.SDK.StreetAccountNews)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The StreetAccount News API provides access to FactSet's proprietary news provider, StreetAccount. StreetAccount, is a premium real-time market intelligence news service that delivers comprehensive U.S., Canadian, and European coverage (and expanding Asia coverage). All possible sources for corporate news are scanned and key story facts are highlighted and presented in an easy-to-read format.

**StreetAccount Filters, Headlines, and Views:**

These endpoints allow for the retrieval of news headlines using filters such as Watchlists/Indices/Tickers, Categories (the equivalent of 'Subjects' within the Workstation), Market Topics, Regions, and Sectors.  Headlines can also be retrieved based on saved views within the Workstation.

 **StreetAccount Historical Stories:**

These endpoints provide access to historical StreetAccount (SA) news. The API delivers SA stories in XML format based on user-specified date input parameters. Output files are securely available to users through a URL. This API has three endpoints: Create, Status, and Get.

Please note that this API only supports adhoc requests for historical files and does not support real-time files. If real-time push is required, consider using other methods such as SFTP, QNT account, or Azure Storage. Both historical and real-time Street Account news can be delivered via SFTP, QNT account, or Azure Storage.

The files delivered contain both metadata and content body, eliminating the need for multiple requests through multiple services to retrieve all the information.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.1.0
- SDK version: 1.1.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.StreetAccountNews -v 1.1.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.StreetAccountNews -Version 1.1.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.StreetAccountNews.Api;
using FactSet.SDK.StreetAccountNews.Client;
using FactSet.SDK.StreetAccountNews.Model;

namespace Example
{
    public static class GetStreetAccountFiltersExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.StreetAccountNews.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new FiltersApi(config);
            var attributes = new List<string>(); // List<string> | Pass a list of filters to return the respective type of filter. Accepted list values are \"structured\" and/or \"flattened\". If no _atrributes are specified, all filters will be returned in the response (this is the default response).  (optional) 

            try
            {
                // Retrieve all StreetAccount filters
                FilterResponse result = apiInstance.GetStreetAccountFilters(attributes);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling FiltersApi.GetStreetAccountFilters: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/streetaccount/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FiltersApi* | [**GetStreetAccountFilters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FiltersApi.md#getstreetaccountfilters) | **GET** /filters | Retrieve all StreetAccount filters
*FiltersApi* | [**GetStreetAccountFiltersCategories**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FiltersApi.md#getstreetaccountfilterscategories) | **GET** /filters/categories | Retrieve all StreetAccount filter categories
*FiltersApi* | [**GetStreetAccountFiltersRegions**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FiltersApi.md#getstreetaccountfiltersregions) | **GET** /filters/regions | Retrieve all StreetAccount filter regions
*FiltersApi* | [**GetStreetAccountFiltersSectors**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FiltersApi.md#getstreetaccountfilterssectors) | **GET** /filters/sectors | Retrieve all StreetAccount filter sectors
*FiltersApi* | [**GetStreetAccountFiltersTopics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FiltersApi.md#getstreetaccountfilterstopics) | **GET** /filters/topics | Retrieve all StreetAccount filter topics
*FiltersApi* | [**GetStreetAccountFiltersWatchlists**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FiltersApi.md#getstreetaccountfilterswatchlists) | **GET** /filters/watchlists | Retrieve all StreetAccount filter watchlists
*HeadlinesApi* | [**GetStreetAccountHeadlines**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesApi.md#getstreetaccountheadlines) | **POST** /headlines | Retrieve StreetAccount headlines for given filters
*HeadlinesApi* | [**GetStreetAccountHeadlinesByView**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesApi.md#getstreetaccountheadlinesbyview) | **POST** /headlines/view | Retrieve StreetAccount headlines for given view
*StreetAccountHistoricalStoriesApi* | [**GetFilesData**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StreetAccountHistoricalStoriesApi.md#getfilesdata) | **GET** /historical/files/get | Returns the StreetAccount Historical data in files requested in the /historical/files/create endpoint.
*StreetAccountHistoricalStoriesApi* | [**GetStatusData**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StreetAccountHistoricalStoriesApi.md#getstatusdata) | **GET** /historical/files/status | Returns the status of the request
*StreetAccountHistoricalStoriesApi* | [**RequestFiles**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StreetAccountHistoricalStoriesApi.md#requestfiles) | **POST** /historical/files/create | Requests the creation of StreetAccount News Files with historical data.
*ViewsApi* | [**CreateQuickAlertForView**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/ViewsApi.md#createquickalertforview) | **POST** /quick-alert/create | Creates a quick-alert for given saved view
*ViewsApi* | [**CreateStreetAccountView**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/ViewsApi.md#createstreetaccountview) | **POST** /views/create | Creates and saves a StreetAccount view
*ViewsApi* | [**DeleteQuickalertView**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/ViewsApi.md#deletequickalertview) | **POST** /quick-alert/delete | Deletes an existing quick alert for a view.
*ViewsApi* | [**DeleteStreetAccountView**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/ViewsApi.md#deletestreetaccountview) | **POST** /views/delete | Deletes an existing StreetAccount view
*ViewsApi* | [**EditStreetAccountView**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/ViewsApi.md#editstreetaccountview) | **POST** /views/update | Edits and saves an existing StreetAccount view
*ViewsApi* | [**GetStreetAccountViews**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/ViewsApi.md#getstreetaccountviews) | **GET** /views | Retrieves StreetAccount search views


## Documentation for Models

 - [Model.AcceptedResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/AcceptedResponse.md)
 - [Model.CreateFilesRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/CreateFilesRequest.md)
 - [Model.CreateFilesRequestObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/CreateFilesRequestObject.md)
 - [Model.CreateOrEditViewBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/CreateOrEditViewBody.md)
 - [Model.CreateOrEditViewBodyData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/CreateOrEditViewBodyData.md)
 - [Model.CreateOrEditViewTickers](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/CreateOrEditViewTickers.md)
 - [Model.CreateViewResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/CreateViewResponse.md)
 - [Model.CreateViewResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/CreateViewResponseData.md)
 - [Model.DateTimeRangeObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/DateTimeRangeObject.md)
 - [Model.DeleteViewBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/DeleteViewBody.md)
 - [Model.DeleteViewBodyData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/DeleteViewBodyData.md)
 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/Error.md)
 - [Model.ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/ErrorObject.md)
 - [Model.FilterCategoriesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterCategoriesResponse.md)
 - [Model.FilterCategoriesResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterCategoriesResponseData.md)
 - [Model.FilterRegionsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterRegionsResponse.md)
 - [Model.FilterRegionsResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterRegionsResponseData.md)
 - [Model.FilterResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterResponse.md)
 - [Model.FilterResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterResponseData.md)
 - [Model.FilterSectorsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterSectorsResponse.md)
 - [Model.FilterSectorsResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterSectorsResponseData.md)
 - [Model.FilterTopicResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterTopicResponse.md)
 - [Model.FilterTopicResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterTopicResponseData.md)
 - [Model.FilterWatchlistsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterWatchlistsResponse.md)
 - [Model.FilterWatchlistsResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FilterWatchlistsResponseData.md)
 - [Model.FlattenedFilters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFilters.md)
 - [Model.FlattenedFiltersCategories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFiltersCategories.md)
 - [Model.FlattenedFiltersCategoriesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFiltersCategoriesObject.md)
 - [Model.FlattenedFiltersRegions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFiltersRegions.md)
 - [Model.FlattenedFiltersRegionsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFiltersRegionsObject.md)
 - [Model.FlattenedFiltersSectors](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFiltersSectors.md)
 - [Model.FlattenedFiltersSectorsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFiltersSectorsObject.md)
 - [Model.FlattenedFiltersTopics](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFiltersTopics.md)
 - [Model.FlattenedFiltersTopicsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFiltersTopicsObject.md)
 - [Model.FlattenedFiltersWatchlists](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFiltersWatchlists.md)
 - [Model.FlattenedFiltersWatchlistsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/FlattenedFiltersWatchlistsObject.md)
 - [Model.Getfiles](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/Getfiles.md)
 - [Model.GetfilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/GetfilesResponse.md)
 - [Model.HeadlinesRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesRequest.md)
 - [Model.HeadlinesRequestByView](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesRequestByView.md)
 - [Model.HeadlinesRequestByViewData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesRequestByViewData.md)
 - [Model.HeadlinesRequestByViewMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesRequestByViewMeta.md)
 - [Model.HeadlinesRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesRequestData.md)
 - [Model.HeadlinesRequestDataSearchTime](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesRequestDataSearchTime.md)
 - [Model.HeadlinesRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesRequestMeta.md)
 - [Model.HeadlinesRequestMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesRequestMetaPagination.md)
 - [Model.HeadlinesRequestTickersObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesRequestTickersObject.md)
 - [Model.HeadlinesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesResponse.md)
 - [Model.HeadlinesResponseMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesResponseMeta.md)
 - [Model.HeadlinesResponseMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/HeadlinesResponseMetaPagination.md)
 - [Model.MetaOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/MetaOne.md)
 - [Model.Model202ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/Model202ErrorObject.md)
 - [Model.PaginationOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/PaginationOne.md)
 - [Model.QuickAlertsBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/QuickAlertsBody.md)
 - [Model.QuickAlertsBodyData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/QuickAlertsBodyData.md)
 - [Model.QuickAlertsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/QuickAlertsResponse.md)
 - [Model.SearchResponseArrayObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/SearchResponseArrayObject.md)
 - [Model.StatusOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StatusOne.md)
 - [Model.StructuredFilters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFilters.md)
 - [Model.StructuredFiltersCategories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersCategories.md)
 - [Model.StructuredFiltersCategoriesObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersCategoriesObject.md)
 - [Model.StructuredFiltersChildrenObjectCategories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersChildrenObjectCategories.md)
 - [Model.StructuredFiltersChildrenObjectRegions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersChildrenObjectRegions.md)
 - [Model.StructuredFiltersChildrenObjectSectors](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersChildrenObjectSectors.md)
 - [Model.StructuredFiltersChildrenObjectTopics](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersChildrenObjectTopics.md)
 - [Model.StructuredFiltersRegions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersRegions.md)
 - [Model.StructuredFiltersRegionsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersRegionsObject.md)
 - [Model.StructuredFiltersSectors](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersSectors.md)
 - [Model.StructuredFiltersSectorsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersSectorsObject.md)
 - [Model.StructuredFiltersTopics](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersTopics.md)
 - [Model.StructuredFiltersTopicsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersTopicsObject.md)
 - [Model.StructuredFiltersWatchlists](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersWatchlists.md)
 - [Model.StructuredFiltersWatchlistsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/StructuredFiltersWatchlistsObject.md)
 - [Model.SubmittedResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/SubmittedResponse.md)
 - [Model.Views](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/Views.md)
 - [Model.ViewsObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StreetAccountNews/v1/docs/ViewsObject.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
